// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Payment Ts&Cs Snapshot comparison orderSummaryTs&Cs render product Contribution for region ANNUAL correctly 1`] = `
<div>
  <div
    class="css-y3m96y-OrderSummaryTsAndCs"
  >
    <p>
      Auto renews every 
      year
       until you cancel.
    </p>
    <p>
      Cancel or change your support anytime.
    </p>
  </div>
</div>
`;

exports[`Payment Ts&Cs Snapshot comparison orderSummaryTs&Cs render product GuardianAdLite for region MONTHLY correctly 1`] = `
<div>
  <div
    class="css-y3m96y-OrderSummaryTsAndCs"
  >
    <p>
      Auto renews every 
      month
       until you cancel.
    </p>
    <p>
      Cancel anytime.
    </p>
  </div>
</div>
`;

exports[`Payment Ts&Cs Snapshot comparison orderSummaryTs&Cs render product SupporterPlus for region MONTHLY correctly 1`] = `
<div>
  <div
    class="css-y3m96y-OrderSummaryTsAndCs"
  >
    <p>
      Auto renews every 
      month
       until you cancel.
    </p>
    <p>
      Cancel or change your support anytime. If you cancel within the first 14 days, you will receive a full refund.
    </p>
  </div>
</div>
`;

exports[`Payment Ts&Cs Snapshot comparison orderSummaryTs&Cs render product TierThree for region MONTHLY correctly 1`] = `
<div>
  <div
    class="css-y3m96y-OrderSummaryTsAndCs"
  >
    <p>
      You’ll pay
       
      $37/month for the first 12 months, then $45/month
       
      afterwards unless you cancel. Offer only available to new subscribers who do not have an existing subscription with the Guardian.
    </p>
    <p>
      Auto renews every 
      month
      . Cancel anytime.
    </p>
  </div>
</div>
`;
